@@ -4249,8 +4249,8 @@ etpub autobalance features)<br>
 	!freeze [NAME|SLOT] [REASON]
 	</td><td>
 	Freezes the client in slot number SLOT or with name containing NAME.
-	If no parameter is provided it freezes all players.
-	Frozen player(s) cannot be shot during this time.
+	If no parameter (or -1 as second parameter) is provided it freezes all players.
+	Frozen player(s) cannot receive damage during this time.
 	If REASON is specified it is printed to the client.
 </td></tr>
 
